# acities

./: .gitignore  README.md  acities.sln  docker-compose.yml
.github/workflows/: ci.yml
backend-csharp/: README.md
backend-csharp/src/AuthService/: AuthService.csproj  Dockerfile  Program.cs
backend-csharp/src/EconomyService/: Dockerfile  Program.cs
backend-csharp/src/GameStateService/: Dockerfile  GameStateService.csproj  Program.cs
backend-csharp/src/SocialService/: Dockerfile  Program.cs
client-java/: README.md  build.gradle.kts  settings.gradle.kts
client-java/src/main/java/com/acities/: GameClient.java  Main.java
client-java/src/main/java/com/acities/components/: AIComponent.java  BuildingComponent.java  InteriorComponent.java  PlayerComponent.java  PositionComponent.java  RenderComponent.java  RoadComponent.java  VelocityComponent.java
client-java/src/main/java/com/acities/ecs/: Component.java  Entity.java  EntityManager.java  SystemBase.java
client-java/src/main/java/com/acities/engine/: Engine.java  NativeEngine.java
client-java/src/main/java/com/acities/entities/: EntityFactory.java
client-java/src/main/resources/npcs/: citizen.json  shopkeeper.json  worker.json
docs/: architecture.md
engine-cpp/: CMakeLists.txt  README.md
engine-cpp/include/acities/: Engine.h  Pathfinding.h
engine-cpp/src/: Engine.cpp  NativeEngine.cpp  Pathfinding.cpp
web-platform/: Dockerfile  README.md  next-env.d.ts  package.json  tsconfig.json
web-platform/pages/: index.tsx
web-platform/pages/api/: hello.ts
(+7 files in other folders)
